table and screen alignment fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,9 +99,10 @@ select {
     /* background-color: rgb(69, 158, 210); */
     padding: 2px 10px;
     border-radius: 25px;
-    /* position: absolute;
-    right: 20px; */
-    margin-left: 180px;
+
+    position: absolute;
+    right: 20px;
+    /* margin-left: 180px; */
 }
 
 
@@ -153,10 +154,11 @@ select {
     /* color: rgb(103, 102, 102); */
 }
 #table-type-title {
-    /* position: absolute;
-    right: 150px; */
+    position: absolute;
+    right: 80px;
     /* top: 10px; */
-    margin-left: 185px;
+    /* margin-left: 185px; */
+    /* left: 50px; */
 }
 #table-activity-title {
     /* position: absolute;
